src/test/deca/context/invalid/created/binary_exp/op_bool/or_boolean_float.deca
// Description :
//    test or entre un boolean et un float
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: Type gauche boolean. Type droit float Type attendu: ‘boolean’

{
boolean a;
float b;
boolean c = a || b;
}

